name: bnfparser
version: 1.2
cabal-version: 1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: 2018 Timo Denk
maintainer: Timo Denk
stability: experimental
homepage: https://github.com/Simsso/BNF-Parser
bug-reports: https://github.com/Simsso/BNF-Parser/issues
synopsis: Parses Backus-Naur form strings
description:
    Haskell server that parses Backus-Naur form expressions (syntax only).
category: Parser
author: Timo Denk
extra-source-files:
    .gitignore
    MetaData/BNFDefinition.txt
    MetaData/APISpecification.yaml
    Samples/Valid/PostalAddress.txt
    Samples/Valid/BNFDefinition.txt
    Samples/Valid/NewLinesWithSpaces.txt
    Samples/Invalid/ClosingGreaterThanMissing.txt
    Samples/Invalid/RuleMarker.txt
    README.md
    LICENSE
    Webpage/index.html
    Dockerfile
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable bnfparser
  main-is: Main.hs
  buildable: True
  build-depends:
      megaparsec ==5.*,
      aeson -any,
      http-types -any,
      QuickCheck -any,
      scotty -any,
      base -any,
      hspec -any,
      hspec-core -any,
      bytestring -any
  default-language: Haskell2010
  other-modules:
      Parser.BackusNaurForm
      Parser.Util
      Parser.Server
      Tests.Run
      Tests.ParserTest
      Tests.IntegrationTest
      Tests.PropertyTest
